frontend/src/components/SignupFormPage/SignupForm.css
#sign-up-container {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    flex-direction: column;
    background-image: linear-gradient(45deg, #50c0fb, #0b3674);
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    position: absolute;
    height: 100%;
    width: 100%;
}

#sign-up-container form {
    width: 500px;
    height: 375px;  
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 30px;
}

#sign-up-container h1 {
    font-family: 'Roboto Condensed', sans-serif;
    font-size: 40px;
    color: white;
    font-weight: bolder;
}

#sign-up-container input {
    width: 400px;
    height: 40px;
    margin: 5px;
    font-size: 30px;
    border-radius: 10px;
}

#sign-up-container button {
    margin-top: 20px;
    height: 40px;
    width: 350px;
    font-size: 30px;
    border: none;
    background-color:  #2F496E;
    color: #F4EADE;
    border-radius: 20px;
}

#sign-up-container button:hover {
    background-color:  #3a4e69
}


@media only screen and (max-width: 600px) {

    #sign-up-container h1 {  
        font-size: 30px;
    }

    #sign-up-container input {
        width: 350px;
        height: 30px;
        margin: 5px;
        font-size: 25px;
    }

}

